--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "prepare": "husky install",
     "test": "jest",
-    "test:dev": "jest --wathcAll"
+    "test:dev": "jest --wathcAll",
+    "start": "node app/board/board.js"
   },
   "keywords": [],
   "author": "",
